--- a/site/src/pages/components/button.mdx
+++ b/site/src/pages/components/button.mdx
@@ -9,7 +9,7 @@ import ButtonDemoDiv from '../../components/ButtonDemoDiv.astro';
 
 # Button
 
-Минимальный, полностью компонент кнопки. Работает на `HTMLButtonElement` или произвольной ноде с ролью `button`.
+Минимальный компонент кнопки. Работает на `HTMLButtonElement` или произвольной ноде с ролью `button`.
 
 ## Когда использовать
 - Если требуется предсказуемая кнопка без привязки к UI-фреймворкам и стилям.
